[package]
name = "oram"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rayon = { version = "1.5.2", default-features = false, optional = true }
plotters = "0.3.0"

[features]
default = ["parallel"]
parallel = ["rayon"]

[[bin]]
name = "stash-benches"
path = "bin/bench.rs"

[[bin]]
name = "plot-benches"
path = "bin/plot.rs"
